--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -52,8 +52,11 @@
                         <br>
 
                         <div class="tour-content">
-                            <h3 class="title is-4">Tour Timing</h3>
-                            {{ item.tour_time[0] }}  - {{ item.tour_time[1] }}
+                            <h3 class="title is-4">Tour Timings</h3>
+                            {% for timing in item.tour_time %}
+                                {{ timing }}
+                                <br>
+                            {% endfor %}
                         </div>
                     </div>
 
