Updated search function

--- a/templates/components/listing-card.html
+++ b/templates/components/listing-card.html
@@ -28,8 +28,9 @@
 
 {% else %}
     <div class='section'>
-        <h1>Oh No!</h1>
-        <p>There isn't any Favourites :(</p>
+        <p class='subtitle has-text-centered'>
+            We are unable to find such a tour 
+        </p>
     </div>
 
 {% endif %}
