--- a/templates/tourGuides/allBusinesses.html
+++ b/templates/tourGuides/allBusinesses.html
@@ -87,7 +87,7 @@
                             <div class="columns is-vcentered">
                                 <div class="column">
                                     <div class="ml-4">
-                                        {% if item.process_step <= 4 %}
+                                        {% if 1 <= item.process_step <= 4 %}
                                             <span class="tag is-info is-light mb-4">Planning</span>
                                         {% elif 4 < item.process_step < 7 %}
                                             <span class="tag is-success is-light mb-4">Confirmed</span>
