--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -10,7 +10,7 @@
         <p class="is-size-5 has-text-weight-bold has-text-centered">Update Password?</p>
         <p class="has-text-centered">Feel free to change your password anytime.</p>
         <form class="form-horizontal" action="/me/settings" method="POST">
-            {{ form1.csrf_token }}
+            {{ form.csrf_token }}
             <div class="field">
                 <label class="label" for="old_password">Current Password:</label>
                 <div class="control">
@@ -46,7 +46,7 @@
             </div>
             <div class="field is-grouped is-grouped-centered mt-5 has-text-centered">
                 <div class="control">
-                    <button class="button is-danger is-light">
+                    <button class="button is-danger is-light" onclick="window.location.href='/me/settings'">
                         Cancel
                     </button>
                 </div>
