which idiot changed user to userData in tourBase...

--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -13,7 +13,7 @@
                 <img src="/logo.png" style="height: 7rem">
             </h1>
             <h2 class="subtitle is-size-3 has-text-light">
-                Tours by Locals, for Locals
+                Hop on some Local Tours
             </h2>
         </div>
     </section>
