--- a/templates/setting.html
+++ b/templates/setting.html
@@ -156,7 +156,7 @@
                                 </div>
                             </div>
                             <div class="field">
-                                <label class="label" for="user-submit"></label>
+                                <label class="label" for="submit-setting"></label>
                                 <div class="control">
                                     <input type='submit' value='Update!' id="submit-setting" name="submit-setting"
                                            class="button is-success">
